--- a/Templates_m/catalogue.html
+++ b/Templates_m/catalogue.html
@@ -5,6 +5,7 @@
 <input type="hidden" name="op" value="catalogue">
 <input type="text" name="k" value="<TMPL_VAR k>" size=16>
 <input type="submit" value=" <TMPL_VAR lang_search> ">
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 <br>
 <a href="#" onClick="this.style.display='none';$$('advs').style.display='block';return false;" class="txt12">Advanced search</a>
 <div id="advs" style="display:none;width:450px;">
