--- a/Templates_m/checkfiles.html
+++ b/Templates_m/checkfiles.html
@@ -10,6 +10,7 @@
 <TMPL_VAR lang_one_url_per_line>
 <br>
 <Form method="POST">
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 <input type="hidden" name="op" value="checkfiles">
 <Textarea name="list" rows=12 style="width:100%;font:12px Arial"></Textarea>
 <br><input type="submit" name="process" value="<TMPL_VAR lang_check_urls>">
