--- a/Templates_m/confirm_password.html
+++ b/Templates_m/confirm_password.html
@@ -1,4 +1,5 @@
 <Form>
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 <input type="hidden" name="op" value="<TMPL_VAR op>">
 <input type="hidden" name="id" value="<TMPL_VAR id>">
 <h2><TMPL_VAR msg></h2>
