--- a/Templates_m/deurl.html
+++ b/Templates_m/deurl.html
@@ -15,6 +15,7 @@
 	<div style="padding-top:200px;">
 		<h1><TMPL_VAR file_name></h1>
 		<form name="F1" method="post" action="<TMPL_VAR site_url>/<TMPL_IF m_j_hide>dl<TMPL_ELSE><TMPL_VAR file_code></TMPL_IF>">
+		<input type="hidden" name="token" value="<TMPL_VAR token>">
 		<input type="hidden" name="op" value="download1">
 		<input type="hidden" name="id" value="<TMPL_VAR file_code>">
 		<input type="submit" name="go" value=" Proceed to file " style="font-size:17px;font-weight:bold; padding:10px;">
