--- a/Templates_m/download_premium_only.html
+++ b/Templates_m/download_premium_only.html
@@ -1,4 +1,4 @@
-<div style="width:680px;border: 1px dashed #f0f0f0;text-align:left;margin-bottom:50px;">
+<div style="border: 1px dashed #f0f0f0;text-align:left;margin-bottom:50px;">
 
 <h2>File: <font style="color:darkred"><TMPL_VAR file_name></font> [<font style="color:#114"><TMPL_VAR fsize></font>]</h2>
 <br><br>
