--- a/Templates_m/report_file.html
+++ b/Templates_m/report_file.html
@@ -14,6 +14,7 @@ function CheckForm(f)
 <input type="hidden" name="op" value="report_file_send">
 <input type="hidden" name="rand" value="<TMPL_VAR rand>">
 <input type="hidden" name="id" value="<TMPL_VAR id>">
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 <table cellpadding=3 cellspacing=1 class="tbl1">
 <TR class="hdr"><TD colspan=2><TMPL_VAR lang_report_abuse></TD></TR>
 <tr><td align=right><b><TMPL_VAR lang_file_name>:</b></td><td><TMPL_VAR file_name></td></tr>
