--- a/Templates_m/request_money.html
+++ b/Templates_m/request_money.html
@@ -4,7 +4,7 @@
 
 <Form method="POST">
 <input type="hidden" name="op" value="request_money">
-
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 <TMPL_IF enabled_prem>
 <TMPL_IF convert_days>
 <TMPL_IF convert_money>
