--- a/Templates_m/download0.html
+++ b/Templates_m/download0.html
@@ -1,5 +1,6 @@
 <font style="font-size:12px;"><TMPL_VAR lang_you_requested> <font color="red"><TMPL_VAR site_url><TMPL_IF usr_add_login>/<TMPL_VAR usr_login></TMPL_IF>/<TMPL_VAR file_code>/<TMPL_VAR file_name></font> (<TMPL_VAR fsize>)</font>
 <br>
+
 <h2><TMPL_VAR lang_premium_features></h2>
 <TMPL_INCLUDE comparison.html>
 <br>
@@ -11,6 +12,7 @@
 <input type="hidden" name="referer" value="<TMPL_VAR referer>">
 <input type="submit" name="method_premium" value="<TMPL_VAR lang_premium_download>"> &nbsp; &nbsp; &nbsp; &nbsp;
 <input type="submit" name="method_free" value="<TMPL_VAR lang_free_download>">
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 </Form>
 
 <TMPL_IF ads>
