--- a/Templates_m/folder_form.html
+++ b/Templates_m/folder_form.html
@@ -1,6 +1,7 @@
 <Form method="POST">
 <input type="hidden" name="op" value="fld_edit">
 <input type="hidden" name="fld_id" value="<TMPL_VAR fld_id>">
+<input type="hidden" name="token" value="<TMPL_VAR token>">
 <Table class="tbl1" cellpadding=3 cellspacing=1>
 <TR class="hdr"><TD colspan=2><TMPL_VAR lang_edit_folder></TD></TR>
 <TR><TD align=right><b><TMPL_VAR lang_file_name></b></TD><TD><input type="text" name="fld_name" value="<TMPL_VAR fld_name>" size=46></TD></TR>
