--- a/Templates_m/main.html
+++ b/Templates_m/main.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height, initial-scale=1.0" />
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+<link rel="stylesheet" href="//code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
 <link rel="stylesheet" href="<TMPL_VAR site_url>/css/mobile.css">
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
+<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+<script src="//code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
 <body>
 
@@ -31,8 +31,8 @@
 			
 			<TMPL_IF enabled_reg>
 			<li><a href="<TMPL_VAR site_url>/login.html"><TMPL_VAR lang_login></a></li>
-			<li><a class="btn_blue" href="<TMPL_VAR site_url>/?op=registration"><TMPL_VAR lang_signup></a></li>
-			<li><a href="<TMPL_VAR site_url>/?op=forgot_pass"><TMPL_VAR lang_forgot_pass></a></li>
+			<li><a class="btn_blue" href="<TMPL_VAR site_url>/register.html"><TMPL_VAR lang_signup></a></li>
+			<li><a href="<TMPL_VAR site_url>/forgotpass.html"><TMPL_VAR lang_forgot_pass></a></li>
 			</TMPL_IF>
 			
 			</TMPL_IF>
